fix z-index in popup

--- a/source/sass/blocks/add-to-basket.scss
+++ b/source/sass/blocks/add-to-basket.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  // z-index: 35;
+  z-index: 35;
   background: rgba(255, 255, 255, 0.8);
   display: none;
 
@@ -23,7 +23,7 @@
   margin-top: -167px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   width: 100%;
-  // z-index: 50;
+  z-index: 50;
   display: none;
 
   &--show {
